common.css
@charset "utf-8";
/* CSS Document */

@import 'https://fonts.googleapis.com/css?family=Raleway';
@import 'https://fonts.googleapis.com/css?family=Open+Sans:400,700';


@font-face {
	font-family: 'GENISO';
	src: url('fonts/GENISO.eot');
	src: url('fonts/GENISO.eot?#iefix') format('embedded-opentype'),
		url('fonts/GENISO.woff2') format('woff2'),
		url('fonts/GENISO.woff') format('woff'),
		url('fonts/GENISO.ttf') format('truetype'),
		url('fonts/GENISO.svg#GENISO') format('svg');
	font-weight: normal;
	font-style: normal;
}


html, body
{
    margin: 0px;
	background-color: #D2D2D2;
	z-index: -2;
	font-family: 'Open Sans', sans-serif;
	/*height: 100%;*/
}

header, footer
{
    font-family: Raleway;
    margin: 0 auto;
	padding: 5em 3em;
	text-align: center;
    background: #555;
}

#pagetitle
{
	font-family: 'Open Sans', sans-serif;
	font-size: 300%;
	display: block;
	width: 100%;
	background-image: url(images/fader.svg);
	background-position: center;
	background-size: 100%;
	margin-top: -2em;
	padding-top: 2em;
	padding-bottom: 1em;
}

timewrapper
{
	width: 88%;
	margin-left: auto;
	margin-right: auto;
	display: block;
	background-color: white;
	z-index: -1;
	box-shadow: 0 0 3em #7A7A7A;
	padding-top: 5em;
	padding-left: 2em;
	padding-right: 2em;
	padding-bottom: 2em;
	height: 100%;
	text-align: left;
	/*min-height: calc(90% - 1.4em);*/
}

.timemark
{
	font-family: 'Open Sans', sans-serif;
	color: #0099CC;
	font-size: x-large;
	float: left;
	display: block;
	height: 100%;
	text-align: right;
	background-image: url(images/dot.svg);
	background-repeat: no-repeat;
	background-position: right;
	padding-right: 1.9em;
	margin-left: -1.4em;
	width: 3.6em;
	margin-right: 2em;
	
}

.timebox
{
	font-family: 'Open Sans', sans-serif;
	color: #4D4D4D;
	padding-left: 4em;
	margin-left: 5em;
	border-left: thick dashed #0099CC;
	background-color: inherit;
}

.timebox eventname
{
	padding-top: 1.5em;
	color: black;
	display: block;
	font-size: x-large;
}

.timebox flavor
{
	color: black;
	display: block;
	font-size: small;
	border-bottom: thin solid #CACACA;
}

.timebox desc
{
	
	display: block;
	
}

.descphoto
{
	display: block;
	padding-top: 1em;
	padding-bottom: 1em;
	text-align: right;
}

albumlink {
	background-image: url(images/Google_Photos_icon.svg);
}

vidlink {
	background-image: url(images/youtube-icon.svg);
}

albumlink, vidlink
{
	
	font-size: small;
	display: inline-block;
	width: 14em;
	background-color: #E7E7E7;
	padding: .2em;
	text-align: right;
	padding-right: 2em;
	background-size: 1.5em;
	background-repeat: no-repeat;
	background-position: 98%;
	border-radius: .5em;
}

albumlink a, vidlink a
{
	text-decoration: none;
	color: inherit;
}

#filterlist
{
	background-color: #E7E7E7
	;	
	display: block;
	width: 100%;
	font-size: small;
	text-align: right;
	color: #858585;
	margin-bottom: 2em;
	margin-left: -1em;
	padding-right: 1em;
}

.option
{
	display: inline-block;
	margin-left: .2em;
	margin-right: .2em;
	color: #595959;
	cursor: pointer;
}

.timebox td
{
	padding-right: 1.3em;
}

.course
{
}

.volunteer
{
}

.work
{
}

header h1
{
    color: #AAA;
    font-size: 40px;
    font-weight: lighter;
    margin-bottom: 5px;
}

header span
{
    color: #222;
}

footer span
{
  color: #AAA;
}

/* Border X get width  */
div.borderXwidth a:before, div.borderXwidth a:after
{
    position: absolute;
    opacity: 0;
    width: 0%;
    height: 2px;
    content: '';
    background: #FFF;
    transition: all 0.3s;
}

div.borderXwidth a:before
{
    left: 0px;
    top: 0px;
}

div.borderXwidth a:after
{
    right: 0px;
    bottom: 0px;
}

div.borderXwidth a:hover:before, div.borderXwidth a:hover:after
{
    opacity: 1;
    width: 100%;
}

.navbarback
{
	background-color: #2F2F2F;
	color: white;
	display: block;
	width: 100%;
	font-size: x-large;
	text-align: center;
	font-family: Raleway;
	padding-top: .3em;
	padding-bottom: .3em;
	box-shadow: 0 0 .6em #000;
	z-index: 50;
	position: fixed;
	top: 0;
	min-height: 1.4em;
}

.navbarback a
{
	display: inline-block;
	padding-left: 1em;
	padding-right: 1em;
	text-decoration: none;
	position: relative;
	vertical-align: middle;
	color: inherit;
	margin-left: auto;
	margin-right: auto;
}

.navbarback img
{
	display: inline-block;
	height: 1.2em;	
	position: relative;
	padding-right: 1em;
	vertical-align: middle;
	margin-left: auto;
	margin-right: auto;
}

.blade
{
	margin-top: .3em;
	display: block;
	width: 95%;
	height: 10vw;
	font-family: 'Geniso', 'Open Sans', sans-serif;
	font-size: 6vw;
	text-align: center;
	background-color: #DBDBDB;
	background-size:100%;
	color: white;
	cursor: pointer;
	margin-left: auto;
	margin-right: auto;
	text-decoration: none;
	text-transform: uppercase;
	transition: all 0.2s ease-in-out;
	letter-spacing: inherit;
}

.blade:hover {
	letter-spacing: .1em;
	width: 100%;
}

a {
	text-decoration: none;
}

a.blade
{
	text-decoration: none;
	color: inherit;
}

#graphicdesign
{
	background-image: url(images/graphic.jpg);
}

#modeling
{
	background-image: url(images/model.jpg);
}

#photography
{
	background-image: url(images/photo.jpg);
}

#vectorart
{
	background-image: url(images/vector.jpg);
}

#videos
{
	background-image: url(images/vid.JPG);
}

social
{
	display: table;
	width: 100%;
	table-layout: fixed;
	text-align: center;
}

navbutton {
	margin-left: auto;
	margin-right: auto;
	display: inline-block;
	text-transform: uppercase;
}

social iframe
{
	width: 160px;
	height: 160px;
	seamless: seamless;
	border: 0;
	margin: 20px;

	display: inline-block;
}

.legacyframe {
	border: none;
	top: -150px;
	position: relative;
	scrolling: no;
	pointer-events:none;
	overflow: hidden;
	margin-left: -2em;
	margin-right: -2em;
	width: 113.6363636363636%;
}

#legacy {
	width: 88%;
	margin-left: auto;
	margin-right: auto;
	background-color: #000;
	position: relative;
	display: block;
	overflow: hidden;
	margin-bottom: -186px;
	box-shadow: 0 0 3em #7A7A7A;
	padding-left: 2em;
	padding-right: 2em;
	
}

.loadbar {
	display: block;
	background-color: #CAE5FD;
	width: 100%;
	height: .25em;
	margin-top: 3em;
	margin-bottom: 1em;
}

.prog {
	display: block;
	width: 0%;
	background-color: #28B2FF;
	height: .25em;
}

#burger {
	float: left;
	display: block;
	padding-left: .6em;
	font-size: xx-large;
	height: 100%;
	position: absolute;
}

#mobilenav, #mobilemenu {
	display: none;
}

#desktopnav {
	display: block;
	width: 80%;
	margin-left: auto;
	margin-right: auto;
	text-transform: uppercase;
}

#mobilenav {
	color: #FFF;
}

#mobilemenu {
	background-color: #4D4D4D;
	margin-top: 3em;
	padding-top: 1em;
	padding-bottom: .5em;
}

#mobilemenu navbutton {
	display: block;
	background-color: #5E5E5E;
	margin: .2em;
	text-align: center;
	text-decoration: none;
	color: white;
	font-size: x-large;	
	transition: background-color .2s ease-in-out;
	letter-spacing: .07em;
}

#mobilemenu navbutton:hover {
	background-color: #707070;
}

#mobilemenu navbutton:active {
	background-color: #474747;
}

#mobilemenu navbutton a {
	color: white;
}

@media only screen and (max-width: 1087px) {
	.navbarback a {
		padding-left: .5em;
		padding-right: .5em;
	}
}


@media only screen and (max-width: 1113px) {
	/*experience page photos*/
	.descphoto img {
		display: block;
		width: 50%;
		margin-top: .8em;
		margin-bottom: .8em;
	}
	
	albumlink, vidlink {
		display: block;
		margin: 0.8em;
		right: 0%;
		position: relative;
	}
}

@media only screen and (max-width: 939px) {

	.navbarback a {
		padding-left: .5em;
		padding-right: .5em;
	}

	#desktopnav {
		display: none;
	}

	#mobilenav {
		display: block;
	}
}

@media only screen and (max-width: 700px) {
	timewrapper {
		margin-left: 0%;
		margin-right: 0%;
		width: 96%;
		padding-left: 2%;
		padding-right: 2%;
	}

	.blade {
		font-size: 10vw;
		height: 15vw;		
	}

	.descphoto img {
		width: 100%;
	}
}

@media only screen and (max-width: 600px) {
	.timebox {
		margin-left: 1em;
		padding-left: 2em;
		padding-bottom: 1.4em;
	}

	.timemark {
		background-position: left;
		margin-left: 0.07em;
		padding-left: 2em;
		text-align: left;
	}
}

